--- a/public/frontend.css
+++ b/public/frontend.css
@@ -102,8 +102,7 @@ blockquote {
 
 .form-group label {
   display: inline-block;
-  width: 25%;
-  padding-right: 20px;
+  padding: 7px 20px 0px 0px;
   text-align: right;
   cursor: pointer;
   word-wrap: break-word;
