--- a/public/backend.css
+++ b/public/backend.css
@@ -114,10 +114,9 @@ select {
   font-size: 14px;
   font-weight: bold !important;
   color: #666666 !important; }
-
-.form-head img {
-  margin-right: 10px;
-  vertical-align: text-top; }
+  .form-head img {
+    margin-right: 10px;
+    vertical-align: text-top; }
 
 h2.section {
   height: 30px;
@@ -136,10 +135,9 @@ h2.section {
   border: 1px solid #E7E7E7;
   background-image: url(theme/backend/bg_message.png);
   background-repeat: repeat-x; }
-
-.ui-message h2 {
-  margin: 0px;
-  font-size: 12px; }
+  .ui-message h2 {
+    margin: 0px;
+    font-size: 12px; }
 
 /* Alert */
 .alert {
@@ -148,95 +146,80 @@ h2.section {
   border: 1px solid #E7E7E7;
   background-image: url(theme/backend/bg_message.png);
   background-repeat: repeat-x; }
-
-.alert h4 {
-  font-size: 12px; }
+  .alert h4 {
+    font-size: 12px; }
 
 /* Form */
 .form-group {
   margin-bottom: 20px; }
-
-.form-group label {
-  display: inline-block;
-  padding-top: 7px;
-  cursor: pointer;
-  word-wrap: break-word;
-  float: left; }
-
-.form-group label:after {
-  /* content: ':'; */ }
-
-.form-group input {
-  width: 40%;
-  padding: 5px 10px; }
-
-.form-group input[type=text]:focus, .form-group input[type=password]:focus, .form-group input[type=url]:focus {
-  border-color: #ff6100;
-  color: #4082e3; }
-
-.form-group textarea {
-  width: 40%;
-  height: 100px;
-  vertical-align: bottom; }
-
-.form-group textarea:focus {
-  border-color: #ff6100;
-  color: #4082e3; }
+  .form-group label {
+    display: inline-block;
+    padding-top: 7px;
+    cursor: pointer;
+    word-wrap: break-word;
+    float: left; }
+  .form-group label:after {
+    /* content: ':'; */ }
+  .form-group input {
+    width: 40%;
+    padding: 5px 10px; }
+  .form-group input[type=text]:focus, .form-group input[type=password]:focus, .form-group input[type=url]:focus {
+    border-color: #ff6100;
+    color: #4082e3; }
+  .form-group textarea {
+    width: 40%;
+    height: 100px;
+    vertical-align: bottom; }
+  .form-group textarea:focus {
+    border-color: #ff6100;
+    color: #4082e3; }
 
 .form-actions {
   padding-top: 20px; }
-
-.form-actions input[type=submit], .form-actions button {
-  margin-right: 10px; }
+  .form-actions input[type=submit], .form-actions button {
+    margin-right: 10px; }
 
 .form-editor {
   margin-bottom: 20px; }
-
-.form-editor label.full-line {
-  display: block;
-  width: auto;
-  height: 30px;
-  line-height: 30px;
-  padding: 0px 10px;
-  border: 1px solid #EFEFEF;
-  background-image: url(theme/bg_textbox.png);
-  background-repeat: repeat-x; }
+  .form-editor label.full-line {
+    display: block;
+    width: auto;
+    height: 30px;
+    line-height: 30px;
+    padding: 0px 10px;
+    border: 1px solid #EFEFEF;
+    background-image: url(theme/bg_textbox.png);
+    background-repeat: repeat-x; }
 
 /* Table */
 .table {
   width: 100%;
   border: 1px solid #EFEFEF; }
-
-.table th {
-  height: 30px;
-  padding-left: 5px;
-  line-height: 30px;
-  background-image: url(theme/backend/bg_tablehead.png);
-  background-repeat: repeat-x;
-  font-weight: bold;
-  text-align: left; }
-
-.table th a, .content-table th a:visited {
-  color: gray;
-  font-weight: bold; }
-
-.table td {
-  padding: 5px;
-  border: 1px solid #EFEFEF;
-  background-image: url(theme/backend/bg_tablecell.png);
-  background-repeat: repeat-x;
-  background-position: left bottom; }
-
-.table tr:hover {
-  color: #333333; }
+  .table th {
+    height: 30px;
+    padding-left: 5px;
+    line-height: 30px;
+    background-image: url(theme/backend/bg_tablehead.png);
+    background-repeat: repeat-x;
+    font-weight: bold;
+    text-align: left; }
+  .table th a, .table th a:visited {
+    color: gray;
+    font-weight: bold; }
+  .table td {
+    padding: 5px;
+    border: 1px solid #EFEFEF;
+    background-image: url(theme/backend/bg_tablecell.png);
+    background-repeat: repeat-x;
+    background-position: left bottom; }
+  .table tr:hover {
+    color: #333333; }
 
 .form-helpers.top {
   min-height: 26px;
   margin-bottom: 20px; }
-
-.form-helpers.top button {
-  margin-right: 10px; }
-
+  .form-helpers.top button {
+    margin-right: 10px; }
 .form-helpers.bottom {
   margin: 10px 0px;
   padding: 5px 0px;
@@ -262,9 +245,8 @@ h2.section {
   border-radius: 3px;
   background-color: #333;
   color: white !important; }
-
-.sort-switcher img {
-  vertical-align: bottom; }
+  .sort-switcher img {
+    vertical-align: bottom; }
 
 .form-helpers .sort-switcher {
   margin: 0px; }
@@ -275,14 +257,12 @@ h2.section {
   margin: 10px 0px;
   padding: 3px 7px;
   border-radius: 3px; }
-
-.recycle-bin-button.enabled {
-  background-color: #333;
-  color: white !important; }
-
-.recycle-bin-button.disabled {
-  background-color: #CCC;
-  color: #999999 !important; }
+  .recycle-bin-button.enabled {
+    background-color: #333;
+    color: white !important; }
+  .recycle-bin-button.disabled {
+    background-color: #CCC;
+    color: #999999 !important; }
 
 .form-helpers .recycle-bin-button {
   margin: 0px; }
@@ -298,28 +278,24 @@ ul.pagination li {
   border-radius: 3px;
   background-color: #EFEFEF;
   font-weight: bold; }
-
-ul.pagination li a {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  width: 100%;
-  height: 100%;
-  line-height: 20px;
-  text-align: center;
-  font-weight: bold; }
-
-ul.pagination li a:hover {
-  background-color: #C6C6C6;
-  color: #ff6100; }
-
-ul.pagination li.active {
-  border: 1px solid #936E41;
-  background-color: #FF6100;
-  color: white; }
-
-ul.pagination li.disabled {
-  display: none; }
+  ul.pagination li a {
+    position: absolute;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    height: 100%;
+    line-height: 20px;
+    text-align: center;
+    font-weight: bold; }
+  ul.pagination li a:hover {
+    background-color: #C6C6C6;
+    color: #ff6100; }
+  ul.pagination li.active {
+    border: 1px solid #936E41;
+    background-color: #FF6100;
+    color: white; }
+  ul.pagination li.disabled {
+    display: none; }
 
 .form-helpers ul.pagination {
   float: right; }
@@ -334,16 +310,13 @@ ul.pagination li.disabled {
   border-radius: 3px;
   font-size: 13px;
   color: white; }
-
-#tooltip img {
-  max-width: 600px;
-  max-height: 450px; }
-
-#tooltip p {
-  margin: 0px 0px 10px 0px; }
-
-#tooltip p:last-child {
-  margin: 0px; }
+  #tooltip img {
+    max-width: 600px;
+    max-height: 450px; }
+  #tooltip p {
+    margin: 0px 0px 10px 0px; }
+  #tooltip p:last-child {
+    margin: 0px; }
 
 .hover-ui {
   display: none; }
@@ -351,17 +324,14 @@ ul.pagination li.disabled {
 /* Confirm Question */
 .boxer-confirm {
   width: 300px; }
-
-.boxer-confirm h2 {
-  margin: 0px 0px 20px 0px;
-  font-size: 14px;
-  font-weight: normal; }
-
-.boxer-confirm button {
-  margin-right: 5px; }
-
-.boxer-confirm label {
-  width: 30% !important; }
+  .boxer-confirm h2 {
+    margin: 0px 0px 20px 0px;
+    font-size: 14px;
+    font-weight: normal; }
+  .boxer-confirm button {
+    margin-right: 5px; }
+  .boxer-confirm label {
+    width: 30% !important; }
 
 /* Datetime Picker */
 .date-time-picker input {
@@ -382,24 +352,19 @@ ul.pagination li.disabled {
 
 .bootstrap-datetimepicker-widget ul {
   padding-left: 0px; }
-
 .bootstrap-datetimepicker-widget li {
   line-height: 20px; }
-
 .bootstrap-datetimepicker-widget.dropdown-menu {
   display: none;
   position: absolute;
   border: 1px solid rgba(0, 0, 0, 0.196);
   border-radius: 3px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.196); }
-
 .bootstrap-datetimepicker-widget .collapse {
   height: 0px;
   overflow-y: hidden; }
-
 .bootstrap-datetimepicker-widget .collapse.in {
   height: auto; }
-
 .bootstrap-datetimepicker-widget .picker-switch i {
   display: block;
   width: 100%;
@@ -407,18 +372,14 @@ ul.pagination li.disabled {
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer; }
-
 .bootstrap-datetimepicker-widget .icon-time {
   background-image: url(icons/clock_red.png); }
-
 .bootstrap-datetimepicker-widget .icon-date {
   background-image: url(icons/date.png); }
-
-.bootstrap-datetimepicker-widget .table-condensed th, .bootstrap-datetimepicker-widget .table-condensed td {
+.bootstrap-datetimepicker-widget .table-condensed th, .bootstrap-datetimepicker-widget .bootstrap-datetimepicker-widget .table-condensed td {
   padding: 4px 5px;
   text-align: center;
   vertical-align: middle; }
-
 .bootstrap-datetimepicker-widget a.btn {
   display: inline-block;
   width: 14px;
@@ -429,13 +390,11 @@ ul.pagination li.disabled {
   border-radius: 3px;
   background: linear-gradient(to bottom, white 0%, #e6e6e6 100%);
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6',GradientType=0 ); }
-
 .bootstrap-datetimepicker-widget .icon-chevron-up::after {
   content: '+';
   font-size: 21px;
   font-style: normal;
   font-weight: bold; }
-
 .bootstrap-datetimepicker-widget .icon-chevron-down::after {
   content: '-';
   font-size: 21px;
@@ -464,45 +423,38 @@ ul.pagination li.disabled {
   margin: 0px 0px 20px 5%;
   width: 90%;
   height: 200px; }
-
-.page-visitors table.days th {
+.page-visitors .page-visitors table.days th {
   width: 50%; }
-
-.page-visitors table.days tr.hover td {
+.page-visitors .page-visitors table.days tr.hover td {
   background-color: #DDD;
   background-image: none; }
 
 .page-members div.data {
   display: none; }
-
 .page-members td a {
   cursor: pointer; }
 
 .page-matches .scores {
   padding-top: 7px; }
-
-.page-matches .scores .item {
-  padding: 5px 10px;
-  border: 1px solid #CCC;
-  border-radius: 3px;
-  margin-right: 10px;
-  cursor: pointer; }
-
-.page-matches .scores .item .score {
-  font-weight: bold; }
-
-.page-matches .scores .add-new {
-  padding: 5px 10px;
-  border: 1px solid #CCC;
-  border-radius: 3px;
-  font-weight: bold;
-  cursor: pointer; }
+  .page-matches .scores .item {
+    padding: 5px 10px;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+    margin-right: 10px;
+    cursor: pointer; }
+  .page-matches .scores .item .score {
+    font-weight: bold; }
+  .page-matches .scores .add-new {
+    padding: 5px 10px;
+    border: 1px solid #CCC;
+    border-radius: 3px;
+    font-weight: bold;
+    cursor: pointer; }
 
 .page-dashboard #chart {
   margin: 0px 0px 20px 5%;
   width: 90%;
   height: 200px; }
-
 .page-dashboard .quick-access div {
   width: 84px;
   float: left;
@@ -511,49 +463,38 @@ ul.pagination li.disabled {
   border: 1px solid #EEEEEE;
   border-radius: 5px;
   text-align: center; }
-
 .page-dashboard .quick-access img {
   display: block;
   padding-left: 18px; }
-
 .page-dashboard .widgets-row div {
   width: 50%;
   float: left; }
-
 .page-dashboard .widgets-row div:first-child {
   box-sizing: border-box;
   padding-right: 10px; }
-
 .page-dashboard .widgets-row table {
   width: 100%;
   table-layout: fixed; }
-
 .page-dashboard .widgets-row td {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis; }
-
 .page-dashboard .widgets-row th:first-child {
   width: 70%; }
-
 .page-dashboard .feed-messages {
   float: left;
   margin-top: 20px; }
-
-.page-dashboard .feed-messages table {
-  width: 100%;
-  table-layout: fixed; }
-
-.page-dashboard .feed-messages th:nth-child(2) {
-  width: 100px; }
-
-.page-dashboard .feed-messages td {
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis; }
-
-.page-dashboard .feed-messages img {
-  vertical-align: text-bottom; }
+  .page-dashboard .feed-messages table {
+    width: 100%;
+    table-layout: fixed; }
+  .page-dashboard .feed-messages th:nth-child(2) {
+    width: 100px; }
+  .page-dashboard .feed-messages td {
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis; }
+  .page-dashboard .feed-messages img {
+    vertical-align: text-bottom; }
 
 /*
  * Mainlayout
@@ -576,10 +517,9 @@ body {
   color: #ff6100;
   background-color: black;
   border: 2px #ff6100 solid; }
-
-#nojavascript img {
-  vertical-align: text-top;
-  margin-right: 10px; }
+  #nojavascript img {
+    vertical-align: text-top;
+    margin-right: 10px; }
 
 #header {
   position: relative;
@@ -682,16 +622,13 @@ body {
   overflow: hidden;
   color: white;
   text-shadow: #404040 0px 1px 1px; }
-
-#info-box span {
-  display: block;
-  margin-bottom: 10px; }
-
-#info-box img {
-  vertical-align: middle; }
-
-#info-box a {
-  color: inherit; }
+  #info-box span {
+    display: block;
+    margin-bottom: 10px; }
+  #info-box img {
+    vertical-align: middle; }
+  #info-box a {
+    color: inherit; }
 
 #info-bar {
   position: absolute;
@@ -728,18 +665,14 @@ body {
   height: 51px;
   color: #FFFFFF;
   cursor: pointer; }
-
-.menu-head.daily {
-  background-image: url(theme/backend/nav_header_daily.png); }
-
-.menu-head.perma {
-  background-image: url(theme/backend/nav_header_perma.png); }
-
-.menu-head.esports {
-  background-image: url(theme/backend/nav_header_esport.png); }
-
-.menu-head.website {
-  background-image: url(theme/backend/nav_header_website.png); }
+  .menu-head.daily {
+    background-image: url(theme/backend/nav_header_daily.png); }
+  .menu-head.perma {
+    background-image: url(theme/backend/nav_header_perma.png); }
+  .menu-head.esports {
+    background-image: url(theme/backend/nav_header_esport.png); }
+  .menu-head.website {
+    background-image: url(theme/backend/nav_header_website.png); }
 
 .submenu a, .submenu a:visited {
   position: absolute;
@@ -749,39 +682,31 @@ body {
   height: 100%;
   color: #CCCCCC;
   z-index: 2; }
-
-.submenu a:hover, submenu a:active {
+.submenu a:hover, .submenu submenu a:active {
   color: #ff6100; }
-
 .submenu img {
   position: absolute;
   left: 28px; }
-
 .submenu .item {
   position: relative;
   background-image: url(theme/backend/nav_item_mid.png);
   text-indent: 60px;
   height: 38px;
   line-height: 38px; }
-
-.submenu .item img {
-  top: 13px; }
-
-.submenu .item:first-child {
-  background-image: url(theme/backend/nav_item_top.png);
-  height: 46px;
-  line-height: 54px; }
-
-.submenu .item:first-child img {
-  top: 20px; }
-
-.submenu .item:last-child {
-  background-image: url(theme/backend/nav_item_bot.png);
-  height: 49px;
-  line-height: 42px; }
-
-.submenu .item:last-child img {
-  top: 13px; }
+  .submenu .item img {
+    top: 13px; }
+  .submenu .item:first-child {
+    background-image: url(theme/backend/nav_item_top.png);
+    height: 46px;
+    line-height: 54px; }
+    .submenu .item:first-child img {
+      top: 20px; }
+  .submenu .item:last-child {
+    background-image: url(theme/backend/nav_item_bot.png);
+    height: 49px;
+    line-height: 42px; }
+    .submenu .item:last-child img {
+      top: 13px; }
 
 .menu-bottom {
   background-image: url(theme/backend/menu_bottom.png);
@@ -796,19 +721,17 @@ body {
   height: 76px;
   margin-left: 2px;
   background-image: url(theme/backend/footer.png); }
-
-#footer a {
-  display: block;
-  position: absolute;
-  background-image: url(theme/empty.png);
-  left: 114px;
-  top: 30px;
-  width: 45px;
-  height: 35px; }
-
-#footer span {
-  position: absolute;
-  right: 20px;
-  top: 40px;
-  color: #444;
-  /* text-shadow: 0px 1px 2px black; */ }
+  #footer a {
+    display: block;
+    position: absolute;
+    background-image: url(theme/empty.png);
+    left: 114px;
+    top: 30px;
+    width: 45px;
+    height: 35px; }
+  #footer span {
+    position: absolute;
+    right: 20px;
+    top: 40px;
+    color: #444;
+    /* text-shadow: 0px 1px 2px black; */ }
