--- a/scss/base.scss
+++ b/scss/base.scss
@@ -29,31 +29,43 @@ form hr { margin: 30px 0px }
 .text-center { text-align: center; }
 .text-right { text-align: right; }
 
-.form-group::before { display: table; content: ' ' }
-.form-group::after { display: table; content: ' '; clear: both }
-.form-group > div { box-sizing: border-box; padding-left: 15px; float: left }
-.form-group div.checkbox { padding-top: 7px }
+.form-group {
+    &::before { display: table; content: ' ' }
+    &::after { display: table; content: ' '; clear: both }
+    > div { box-sizing: border-box; padding-left: 15px; float: left }
+    div.checkbox { padding-top: 7px }
+}
 
-ul.list-inline { list-style: none; margin: 0px; padding: 0px }
-ul.list-inline li { display: list-item; float: left; margin: 0px; }
+ul.list-inline { 
+    list-style: none; margin: 0px; padding: 0px;
+    li { display: list-item; float: left; margin: 0px; }
+}
 
-ul.list-unstyled { list-style: none; margin: 0px; padding: 0px }
-ul.list-unstyled li { margin: 0px; float: none }
+ul.list-unstyled { 
+    list-style: none; margin: 0px; padding: 0px;
+    li { margin: 0px; float: none }
+}
 
-ul.pagination { list-style: none; margin: 0px; padding: 0px }
-ul.pagination li { display: list-item; float: left; margin: 0px; padding: 2px 5px }
+ul.pagination { 
+    list-style: none; margin: 0px; padding: 0px;
+    li { display: list-item; float: left; margin: 0px; padding: 2px 5px }
+}
 
 .numeric-input { text-align: right }
 
-.spoiler-wrapper { margin: 20px 0px; padding: 0px 10px; background-color: #EEE; }
-.spoiler-wrapper.show { padding-bottom: 10px; }
-.spoiler-wrapper .spoiler-toggle { padding: 10px 0px; content: '...'; cursor: pointer }
+.spoiler-wrapper { 
+    margin: 20px 0px; padding: 0px 10px; background-color: #EEE;
+    .show { padding-bottom: 10px; }
+    .spoiler-toggle { padding: 10px 0px; content: '...'; cursor: pointer }
+    .show .spoiler { height: auto; overflow: visible; }
+}
 .spoiler { height: 0px; overflow: hidden; }
-.spoiler-wrapper.show .spoiler { height: auto; overflow: visible; }
 
-.alert { position: relative;  }
-.alert button.close { position: absolute; right: 10px; top: 0px; border: none; background: none; cursor: pointer; }
-.alert h2 { margin: 0px; }
+.alert { 
+    position: relative;
+    button.close { position: absolute; right: 10px; top: 0px; border: none; background: none; cursor: pointer; }
+    h2 { margin: 0px; }
+}
 .alert-success { border-color: #d6e9c6 !important; background: #dff0d8 !important }
 .alert-warning { border-color: #faebcc !important; background: #fcf8e3 !important }
 .alert-error { border-color: #ebccd1 !important; background: #f2dede !important }
