--- a/scss/frontend.scss
+++ b/scss/frontend.scss
@@ -1,5 +1,7 @@
 @import "base.css";
 
+$primaryColor: #eeffcc;
+
 /*
  * Elements
  */
@@ -43,63 +45,88 @@ blockquote { background: #F4F4F4; border: 1px dotted gray; padding: 5px; margin:
 h1.page-title { }
 
 /* Messages */
-.ui-message { border: 2px solid silver; }
-.ui-message h2 { font-size: 14px; }
-.ui-message .text { }
+.ui-message { 
+    border: 2px solid silver;
+    h2 { font-size: 14px; }
+    .text { }
+}
 
 /* Alert */
-.alert { border: 2px solid silver; }
-.alert h4 { font-size: 14px; }
-.alert button { padding: 0px 10px }
+.alert { 
+    border: 2px solid silver;
+    h4 { font-size: 14px; }
+    button { padding: 0px 10px }
+}
 
 /* Form */
 .form-errors { }
-.form-group { margin-bottom: 20px }
-.form-group.space-top {  }
-.form-group label { display: inline-block; padding: 7px 20px 0px 0px; text-align: right; cursor: pointer; word-wrap: break-word; }
-.form-group label:after { /* content: ':'; */ }
-.form-group input { width: 40%; padding: 5px 10px; border: 2px solid silver; color: #4082E3 }
-.form-group input[type=text]:focus, .form-group input[type=password]:focus, .form-group input[type=url]:focus { border-color: #ff6100; }
-.form-group textarea { vertical-align: bottom; }
-.form-actions { }
-.form-actions input[type=submit], .form-actions button { margin-right: 10px; }
+.form-group { 
+    margin-bottom: 20px;
+    &.space-top {  }
+    label { display: inline-block; padding: 7px 20px 0px 0px; text-align: right; cursor: pointer; word-wrap: break-word; }
+    label:after { /* content: ':'; */ }
+    input { width: 40%; padding: 5px 10px; border: 2px solid silver; color: #4082E3 }
+    input[type=text]:focus, input[type=password]:focus, input[type=url]:focus { border-color: #ff6100; }
+    textarea { vertical-align: bottom; }
+}
+.form-actions { 
+     input[type=submit], button { margin-right: 10px; }
+ }
 
 /* Table */
-.table { width: 100%; }
-.table th { text-align: left }
+.table { 
+    width: 100%;
+    th { text-align: left }
+}
 
 /* Slider Default Styling - Feel free to overwrite */
-.slider { position: relative; width: 100%; height: 245px; /* Height of a single slide */ }
-.slider .slides { position: absolute; left: 0px; top: 0px; width: 100%; height: 100% }
-.slider .slides ul { position: relative; width: 100%; height: 100%; overflow: hidden; }
-.slider .slides ul li { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
-.slider .to-left { position: absolute; left: 0px; top: 40%; width: 35px; height: 35px; line-height: 35px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center; }
-.slider .to-right { position: absolute; right: 0px; top: 40%; width: 35px; height: 35px; line-height: 35px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center }
-.slider .to-left:hover, .slider .to-right:hover { background-color: rgba(0, 0, 0, 1); }
-.slider .buttons { position: absolute; right: 20px; bottom: 20px; }
-.slider .buttons li { width: 30px; height: 30px; line-height: 30px; margin-left: 3px; background-color: rgba(0, 0, 0, 0.5); color: white; cursor: pointer; text-align: center; }
-.slider .buttons li.active{ background-color: rgba(0, 0, 0, 1); }
-.slider .slide-title { position: absolute; margin: 0px; left: 20px; bottom: 20px; color: white; text-shadow: 0px 0px 3px black; }
+.slider { 
+    position: relative; width: 100%; height: 245px; /* Height of a single slide */
+    .slides { 
+        position: absolute; left: 0px; top: 0px; width: 100%; height: 100%;
+        ul { position: relative; width: 100%; height: 100%; overflow: hidden; }
+        ul li { position: absolute; left: 0px; top: 0px; width: 100%; height: 100%; }
+    }
+    .to-left { position: absolute; left: 0px; top: 40%; width: 35px; height: 35px; line-height: 35px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center; }
+    .to-right { position: absolute; right: 0px; top: 40%; width: 35px; height: 35px; line-height: 35px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center }
+    .to-left:hover, .to-right:hover { background-color: rgba(0, 0, 0, 1); }
+    .buttons { 
+        position: absolute; right: 20px; bottom: 20px;
+        li { 
+            width: 30px; height: 30px; line-height: 30px; margin-left: 3px; background-color: rgba(0, 0, 0, 0.5); color: white; cursor: pointer; text-align: center;
+            &.active{ background-color: rgba(0, 0, 0, 1); }
+        }
+    }
+    .slide-title { position: absolute; margin: 0px; left: 20px; bottom: 20px; color: white; text-shadow: 0px 0px 3px black; }
+}
 
-.scroller { overflow-x: hidden; }
-.scroller ul {  }
-.scroller li { width: 100% }
+.scroller { 
+    overflow-x: hidden;
+    ul {  }
+    li { width: 100% }
+}
 
 /*
  * Modules
  */
 
-.create-comment { margin-top: 20px }
-.create-comment .textarea-wrapper { margin: 20px 0px; padding: 0px 20px }
-.create-comment p { margin: 0px }
-.create-comment textarea { width: 100%; height: 70px; margin-left: -20px; padding: 10px 20px; border: 2px solid silver; color: #666; }
-.create-comment textarea:focus { border-color: #ff6100; }
+.create-comment { 
+    margin-top: 20px;
+    .textarea-wrapper { margin: 20px 0px; padding: 0px 20px }
+    p { margin: 0px }
+    textarea { width: 100%; height: 70px; margin-left: -20px; padding: 10px 20px; border: 2px solid silver; color: #666; }
+    textarea:focus { border-color: #ff6100; }
+}
 
-.widget-partners img.filter { filter: grayscale(1); -webkit-filter: grayscale(1); transition: all 0.8s ease; }
-.widget-partners img.filter:hover { filter: grayscale(0); -webkit-filter: grayscale(0); transition: all 0.2s ease; }
+.widget-partners img {
+    &.filter { filter: grayscale(1); -webkit-filter: grayscale(1); transition: all 0.8s ease; }
+    &.filter:hover { filter: grayscale(0); -webkit-filter: grayscale(0); transition: all 0.2s ease; }
+}
 
-.page-videos .video { float: left; width: 33%; text-align: center; }
-.page-videos .video div { width: 90%; height: 150px; margin-left: auto; margin-right: auto; background-position: center; background-repeat: no-repeat; background-size: cover }
+.page-videos .video { 
+    float: left; width: 33%; text-align: center;
+    div { width: 90%; height: 150px; margin-left: auto; margin-right: auto; background-position: center; background-repeat: no-repeat; background-size: cover }
+}
 
 .page-videos .video-player iframe { width: 100%; border: none }
 
@@ -107,55 +134,88 @@ h1.page-title { }
 
 .page-streams .stream-player iframe { width: 100%; border: none }
 
-.widget-streams a { display: block; position: relative; }
-.widget-streams .viewers { float: right; }
+.widget-streams {
+    a { display: block; position: relative; }
+    .viewers { float: right; }
+}
 
-.page-galleries .galleries .item { float: left; display: block; width: 20%; height: 100px; overflow: hidden }
-.page-galleries .galleries .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
-.page-galleries .galleries .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
+.page-galleries .galleries {
+    .item { float: left; display: block; width: 20%; height: 100px; overflow: hidden }
+    .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
+    .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
+}
 
-.page-galleries .images .image { text-align: center; }
-.page-galleries .images .image img { max-width: 100%; max-height: 500px; cursor: zoom-in; }
-.page-galleries .images .previews-wrapper { position: relative; height: 100px; overflow: hidden }
-.page-galleries .images .previews { height: 100%; }
-.page-galleries .images .previews .item { float: left; display: block; width: 100px; height: 100%; overflow: hidden; }
-.page-galleries .images .previews .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
-.page-galleries .images .previews .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
-.page-galleries .images .previews .item.active {  }
-.page-galleries .images .previews-wrapper .link { opacity: 0.5; position: absolute; top: 0px; height: 100%; width: 50px; line-height: 100px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center; }
-.page-galleries .images .previews-wrapper:hover .link { opacity: 1 }
-.page-galleries .images .previews-wrapper .to-left { left: 0px; }
-.page-galleries .images .previews-wrapper .to-right { right: 0px; }
+.page-galleries .images {
+    .image { text-align: center; }
+    .image img { max-width: 100%; max-height: 500px; cursor: zoom-in; }
+    .previews-wrapper { position: relative; height: 100px; overflow: hidden }
+    .previews { 
+        height: 100%;
+        .item { float: left; display: block; width: 100px; height: 100%; overflow: hidden; }
+        .image { width: 100%; height: 100%; background-size: cover; background-position: center; background-repeat: no-repeat; transition: all 0.3s ease; }
+        .image:hover { transform: scale(1.1, 1.1); transition: all 0.3s ease; }
+        .item.active {  }
+    }
+    .previews-wrapper .link { opacity: 0.5; position: absolute; top: 0px; height: 100%; width: 50px; line-height: 100px; background-color: rgba(0, 0, 0, 0.5); color: white; text-align: center; }
+    .previews-wrapper:hover .link { opacity: 1 }
+    .previews-wrapper .to-left { left: 0px; }
+    .previews-wrapper .to-right { right: 0px; }
+}
 
-.widget-galleries li { width: 20%; height: 100px }
-.widget-galleries .item { display: block; width: 100%; height: 100% }
-.widget-galleries .item div { width: 100%; height: 100% }
+.widget-galleries {
+    li { width: 20%; height: 100px }
+    .item { 
+        display: block; width: 100%; height: 100%;
+        div { width: 100%; height: 100% }
+    }
+}
 
-.page-downloads .downloadcats .downloadcat { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; }
-.page-downloads .downloads .download { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: url(theme/file.png); background-position: center top; background-repeat: no-repeat; }
-.page-downloads .downloads .download a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
+.page-downloads {
+    .downloadcats .downloadcat { display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; }
+    .downloads .download { 
+        display: block; float: left; width: 100px; margin: 0px 20px 20px 20px; text-align: center; background-image: url(theme/file.png); background-position: center top; background-repeat: no-repeat;
+        a { display: block; padding-top: 100px; background-position: center 20px; background-repeat: no-repeat; }
+    }
+}
 
-.page-matches {  }
-.page-matches .overview div { width: 33%; text-align: center; float: left }
-.page-matches .overview div > span { display: block }
-.page-matches .overview .mid { padding-top: 40px; font-size: 30px; }
-.page-matches .overview .mid .left-win { color: green }
-.page-matches .overview .mid .left-lose { color: red }
-.page-matches .overview .mid .left-draw { color: orange }
-.page-matches .details { margin-bottom: 20px; padding-top: 20px; }
-.page-matches div.scores .item { width: 33%; float: left; text-align: center; }
-.page-matches div.scores .item:nth-child(n+4) { margin-top: 20px } /* Will only affect the 4th, 5th etc. item */
-.page-matches div.scores .item img { max-width: 100%; }
-.page-matches div.scores .item span { display: block; }
+.page-matches {  
+    .overview {
+        div { width: 33%; text-align: center; float: left }
+        div > span { display: block }
+        .mid { padding-top: 40px; font-size: 30px; }
+        .mid .left-win { color: green }
+        .mid .left-lose { color: red }
+        .mid .left-draw { color: orange }
+    }
+    .details { margin-bottom: 20px; padding-top: 20px; }
+    div.scores {
+        .item { width: 33%; float: left; text-align: center; }
+        .item:nth-child(n+4) { margin-top: 20px } /* Will only affect the 4th, 5th etc. item */
+        .item img { max-width: 100%; }
+        .item span { display: block; }
+    }
+}
 
-.widget-matches-latest li { position: relative; }
-.widget-matches-latest li img { float: left; margin-right: 10px }
-.widget-matches-latest li .scores { position: absolute; right: 0px; top: 0px; }
-.widget-matches-latest li .scores .win { color: green }
-.widget-matches-latest li .scores .lose { color: red }
-.widget-matches-latest li .scores .draw { color: orange }
+.widget-matches-latest {
+    li { position: relative; }
+    li img { float: left; margin-right: 10px }
+    li .scores { position: absolute; right: 0px; top: 0px; }
+    li .scores .win { color: green }
+    li .scores .lose { color: red }
+    li .scores .draw { color: orange }
+}
 
 .page-servers .server { margin-bottom: 20px }
+
+.page-forum {
+    .root-section { background-color: $primaryColor; color: white }
+    .sub-section { 
+        position: relative; height: 30px; overflow: hidden;
+        .info { position: absolute; left: 0px; top: 0px; width: 60%; }
+        .threads { position: absolute; left: 60%; top: 0px; width: 10%; }
+        .latest { position: absolute; left: 70%; top: 0px; width: 30% }
+    }
+}
 
 /*
  * Mainlayout
@@ -164,11 +224,11 @@ h1.page-title { }
 #page-container { width: 960px; min-height: 1080px; margin-left: auto; margin-right: auto; box-shadow: 0px 0px 5px 2px #EEE }
 .page { }
 
-#header { height: 100px; padding-left: 40px; background-color: #EEE }
-#header h2 { margin: 0px; line-height: 100px; }
+#header { 
+    height: 100px; padding-left: 40px; background-color: #EEE;
+    h2 { margin: 0px; line-height: 100px; }
+}
 
 #mid-container { padding: 20px 40px 0px 40px; }
-#content { width: 66%; float: left }
-#sidebar { width: 33%; margin-left: 66% }
-
-#sidebar { padding-left: 40px }
+#content { width: 66%; float: left; }
+#sidebar { width: 33%; margin-left: 66%; padding-left: 40px; }
