--- a/public/base.css
+++ b/public/base.css
@@ -168,3 +168,8 @@ ul.pagination {
 .alert-error {
   border-color: #ebccd1 !important;
   background: #f2dede !important; }
+
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden; }
