--- a/public/backend.css
+++ b/public/backend.css
@@ -1,5 +1,180 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
-@import url(base.css);
+/*
+ * Elements
+ */
+body {
+  margin: 0px;
+  padding: 0px; }
+
+img {
+  border: 0px; }
+
+hr {
+  border: none;
+  border-bottom: 1px solid silver; }
+
+table {
+  width: 100%;
+  border-collapse: collapse; }
+
+form {
+  width: 100%;
+  margin: 0px;
+  padding: 0px; }
+
+form hr {
+  margin: 30px 0px; }
+
+/*
+ * Classes
+ */
+.col-sm-1 {
+  width: 8.33333%; }
+
+.col-sm-2 {
+  width: 16.66667%; }
+
+.col-sm-3 {
+  width: 25%; }
+
+.col-sm-4 {
+  width: 33.33333%; }
+
+.col-sm-5 {
+  width: 41.66667%; }
+
+.col-sm-6 {
+  width: 50%; }
+
+.col-sm-7 {
+  width: 58.33333%; }
+
+.col-sm-8 {
+  width: 66.66667%; }
+
+.col-sm-9 {
+  width: 75%; }
+
+.col-sm-10 {
+  width: 83.33333%; }
+
+.col-sm-11 {
+  width: 91.66667%; }
+
+.col-sm-12 {
+  width: 100%; }
+
+.clearfix:after {
+  display: block;
+  clear: both;
+  content: '.';
+  height: 0;
+  visibility: hidden; }
+
+.hidden {
+  display: none;
+  visibility: hidden; }
+
+.text-left {
+  text-align: left; }
+
+.text-center {
+  text-align: center; }
+
+.text-right {
+  text-align: right; }
+
+.form-group::before {
+  display: table;
+  content: " "; }
+.form-group::after {
+  display: table;
+  content: ' ';
+  clear: both; }
+.form-group > div {
+  box-sizing: border-box;
+  padding-left: 15px;
+  float: left; }
+.form-group div.checkbox {
+  padding-top: 7px; }
+
+ul.list-inline {
+  list-style: none;
+  margin: 0px;
+  padding: 0px; }
+  ul.list-inline li {
+    display: list-item;
+    float: left;
+    margin: 0px; }
+
+ul.list-unstyled {
+  list-style: none;
+  margin: 0px;
+  padding: 0px; }
+  ul.list-unstyled li {
+    margin: 0px;
+    float: none; }
+
+ul.pagination {
+  list-style: none;
+  margin: 0px;
+  padding: 0px; }
+  ul.pagination li {
+    display: list-item;
+    float: left;
+    margin: 0px;
+    padding: 2px 5px; }
+
+.numeric-input {
+  text-align: right; }
+
+.spoiler-wrapper {
+  margin: 20px 0px;
+  padding: 0px 10px;
+  background-color: #EEE; }
+  .spoiler-wrapper .show {
+    padding-bottom: 10px; }
+  .spoiler-wrapper .spoiler-toggle {
+    padding: 10px 0px;
+    content: '...';
+    cursor: pointer; }
+  .spoiler-wrapper .show .spoiler {
+    height: auto;
+    overflow: visible; }
+
+.spoiler {
+  height: 0px;
+  overflow: hidden; }
+
+.alert {
+  position: relative; }
+  .alert button.close {
+    position: absolute;
+    right: 10px;
+    top: 0px;
+    border: none;
+    background: none;
+    cursor: pointer; }
+  .alert h4 {
+    margin: 0px; }
+
+.alert-success {
+  border-color: #d6e9c6 !important;
+  background: #dff0d8 !important; }
+
+.alert-warning {
+  border-color: #faebcc !important;
+  background: #fcf8e3 !important; }
+
+.alert-error {
+  border-color: #ebccd1 !important;
+  background: #f2dede !important; }
+
+.ellipsis {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden; }
+
 ::selection {
   background: #ff6100;
   color: white; }
