--- a/scss/backend.scss
+++ b/scss/backend.scss
@@ -1,5 +1,5 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
-@import "base.css";
+@import "base";
 
 ::selection { background: #ff6100; color: white; }
 
