The user model now has a uploadPath() method

--- a/public/backend.css
+++ b/public/backend.css
@@ -84,6 +84,11 @@ form hr {
 .text-right {
   text-align: right; }
 
+.ellipsis, .form-group label {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden; }
+
 .form-group::before {
   display: table;
   content: " "; }
@@ -169,11 +174,6 @@ ul.pagination {
 .alert-error {
   border-color: #ebccd1 !important;
   background: #f2dede !important; }
-
-.ellipsis {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden; }
 
 ::selection {
   background: #ff6100;
