--- a/public/frontend.css
+++ b/public/frontend.css
@@ -81,7 +81,7 @@ form hr {
   width: 100%;
 }
 
-.clearfix:after, .page-forums .sub-forums:after, .page-forums .threads:after, .page-forumthreads .post:after {
+.clearfix:after, .page-forums .sub-forums:after, .page-forums .threads:after, .page-forumthreads .post:after, .page-forumposts .post:after {
   display: block;
   clear: both;
   content: '.';
@@ -104,6 +104,12 @@ form hr {
 
 .text-right {
   text-align: right;
+}
+
+.ellipsis, .form-group label, .widget-streams .title, .page-forumthreads .post .meta .username, .page-forumposts .post .meta .username {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .form-group::before {
@@ -212,12 +218,6 @@ ul.pagination li {
 .alert-error {
   border-color: #ebccd1 !important;
   background: #f2dede !important;
-}
-
-.ellipsis, .widget-streams .title {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 /*
@@ -785,41 +785,60 @@ blockquote {
 }
 
 /* Forums show_thread page */
-.page-forumthreads .buttons {
+.page-forumthreads .buttons, .page-forumposts .buttons {
   margin-bottom: 20px;
 }
-.page-forumthreads .post {
+.page-forumthreads .post, .page-forumposts .post {
   position: relative;
   margin-bottom: 10px;
   border: 2px solid #EEE;
 }
-.page-forumthreads .post .meta {
+.page-forumthreads .post .meta, .page-forumposts .post .meta {
   position: absolute;
   left: 0px;
   top: 0px;
   width: 120px;
   height: 100%;
-  min-height: 120px;
+  min-height: 135px;
   box-sizing: border-box;
   padding: 10px;
   background-color: #EEE;
   float: left;
 }
-.page-forumthreads .post .meta .username {
+.page-forumthreads .post .meta .username, .page-forumposts .post .meta .username {
   display: block;
 }
-.page-forumthreads .post .meta .avatar {
+.page-forumthreads .post .meta .avatar, .page-forumposts .post .meta .avatar {
   display: block;
 }
-.page-forumthreads .post .content {
+.page-forumthreads .post .meta .counter, .page-forumposts .post .meta .counter {
+  display: block;
+}
+.page-forumthreads .post .content, .page-forumposts .post .content {
   margin-left: 120px;
-  min-height: 140px;
+  min-height: 155px;
 }
-.page-forumthreads .post .content .top-bar {
+.page-forumthreads .post .content .top-bar, .page-forumposts .post .content .top-bar {
+  position: relative;
   padding: 10px;
 }
-.page-forumthreads .post .content .text {
+.page-forumthreads .post .content .top-bar .buttons, .page-forumposts .post .content .top-bar .buttons {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+}
+.page-forumthreads .post .content .text, .page-forumposts .post .content .text {
   padding: 10px;
+  word-wrap: break-word;
+  overflow-x: hidden;
+}
+.page-forumthreads .post .content .text img, .page-forumposts .post .content .text img {
+  max-width: 100%;
+}
+.page-forumthreads .post .content .updated, .page-forumposts .post .content .updated {
+  padding: 10px;
+  font-size: 10px;
+  text-align: right;
 }
 
 /*
