--- a/public/frontend.css
+++ b/public/frontend.css
@@ -747,6 +747,19 @@ blockquote {
 .page-forums .buttons {
   margin-bottom: 20px;
 }
+.page-forums .sub-forums {
+  margin-bottom: 20px;
+}
+.page-forums .sub-forums h2 {
+  margin: 0px;
+  padding: 10px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
+  background-color: #ff6100;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
 .page-forums .threads .thread {
   padding: 10px;
   border: 2px solid #eeeeee;
@@ -766,6 +779,13 @@ blockquote {
 .page-forums .threads .thread .info {
   width: 60%;
   float: left;
+}
+.page-forums .threads .thread .info .sticky, .page-forums .threads .thread .info .closed {
+  padding: 2px;
+  border-radius: 3px;
+  background-color: #ff6100;
+  font-size: 10px;
+  color: white;
 }
 .page-forums .threads .thread .info .meta {
   display: block;
@@ -839,6 +859,15 @@ blockquote {
   padding: 10px;
   font-size: 10px;
   text-align: right;
+}
+
+.widget-latest-threads li {
+  position: relative;
+}
+.widget-latest-threads li .posts-count {
+  position: absolute;
+  right: 0px;
+  top: 0px;
 }
 
 /*
